# buck-rage-vst

./: AGENTS.md  BUCK_RAGE_KnobFix.h  CMakeLists.txt  CURRENT_TASK.md  README.md  SPEC.md  STATE.md
.github/workflows/: build.yml
Source/: GeneratedLayout.h  ImageKnob.h  KnobLookAndFeel.cpp  KnobLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
docs/: blueprint.md  dsp-preview-notes.md  mac-build-notes.md
tools/: knob_renderer.py  validate_dsp_macro.mjs
ui/spec/: ui-spec.json
